Try to fix non responsive contact form.

--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,13 @@ title: Contact
 permalink: /contact/
 css: assets/css/contact.css
 ---
-<div class="row flex-row contact">
-  <div class="col-xs-12 col-md-6">
-    {% include form-contact.html %}
-  </div>
-  <div class="col-xs-12 col-md-6">
-    {% include map.html url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3147.8113019733796!2d145.13227541560468!3d-37.91147307973475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad66acbf64673b9%3A0xfaf9b169a587104!2sMonash+University+Clayton+Campus!5e0!3m2!1sen!2sau!4v1480658098917" %}
+<div class="container">
+  <div class="row contact">
+    <div class="col-xs-12 col-md-6">
+      {% include form-contact.html %}
+    </div>
+    <div class="col-xs-12 col-md-5">
+      {% include map.html url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14423.063336987463!2d131.02839106881993!3d-25.345637598925716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2b236c2b6d625223%3A0x43a8cd4d9bc55f21!2sUluru!5e0!3m2!1sen!2sau!4v1509929054552" %}
+    </div>
   </div>
 </div>
